<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivImportance"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvTask"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/breakfast"
        app:layout_constraintStart_toEndOf="@+id/ivImportance"
        app:layout_constraintTop_toTopOf="@+id/ivImportance" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/make_breakfast"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvTask"
        app:layout_constraintTop_toTopOf="@+id/tvTask" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:backgroundTint="@color/design_default_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/time_breakfast"
        app:layout_constraintEnd_toStartOf="@+id/ivDelete"
        app:layout_constraintTop_toTopOf="@+id/ivDelete" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <EditText
            android:id="@+id/etTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/task"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDescripsion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTask" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="7"
            android:hint="@string/time"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etTask" />

        <EditText
            android:id="@+id/etImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/importance"
            android:inputType="textPersonName"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/etTime"
            app:layout_constraintTop_toBottomOf="@+id/etTime" />

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/teal_200"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/etTask"
            app:layout_constraintTop_toTopOf="@+id/etTask" />

        <TextView
            android:id="@+id/tvAddDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/teal_200"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/etDescripsion"
            app:layout_constraintTop_toTopOf="@+id/etDescripsion" />

        <TextView
            android:id="@+id/tvAddTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/teal_200"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/etTime"
            app:layout_constraintTop_toTopOf="@+id/etTime" />

        <TextView
            android:id="@+id/tvAddImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/teal_200"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/etImportance"
            app:layout_constraintStart_toEndOf="@+id/etImportance" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>